<resources>
    <string name="app_name">DMendelWeather</string>
    <string name="select_city">Select a city : </string>
    <string name="refresh_button">Refresh weather</string>
    <string name="add_new_city_button">Add greatest city</string>
    <string name="add_new_input_city_button">Add new city to list, if it exists</string>
    <string name="current_temperature">Current Temperature </string>
    <string name="low_temperature">Low Temperature </string>
    <string name="high_temperature">High Temperature </string>
    <string name="feels_like_temperature">Feels Like Temperature </string>
    <string name="precipitation">Precipitation </string>
    <string name="input_city">Input city name : </string>
    <string name="remove_city">Remove selected city</string>
</resources>